<resources>
    <string name="app_name">Aqua</string>
    <string name="action_settings">Settings</string>
    <string name="title_temperature">Температура</string>
    <string name="title_led">Свет</string>
    <string name="title_doser">УДО</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lamp_position">Позиция лампы:</string>
    <string name="lamp_on_time">Включение:</string>
    <string name="lamp_off_time">Выключение:</string>
    <string name="lamp_pin">ПИН:</string>
    <string name="lamp_state">Состояние:</string>
    <string name="lamp_enabled">Доступность:</string>
    <string name="lamp_edit">Изменить</string>
    <string name="temperature">Temperature</string>
    <string name="led">Led</string>
    <string name="udo">UDO</string>
    <string name="refresh">Refresh</string>
    <string name="exit">Exit</string>
    <string name="options">Options</string>
    <string name="heater">Heater</string>
    <string name="log">Log</string>
    <string name="lamp_on_from">Включена с</string>
    <string name="lamp_on_to">до</string>
    <string name="off">ВЫКЛ</string>
    <string name="on">ВКЛ</string>
    <string name="save">Сохранить</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
</resources>
